--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,15 +17,14 @@ body{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
-    width: 980px;
+    align-items: top;
+    max-width: 980px;
     padding: 20px 0;
     margin: 0 auto;
 }
 
 .login-message{
-    display: flex;
-    flex-direction: column;
+    flex-basis: 580px;
     margin: 0;
     padding-right: 32px;
     text-align: left;
@@ -41,6 +40,23 @@ body{
 
 }
 
+/* the log-in message sections */
+.fb-logo{
+    padding: 112px 0 16px 0;
+}
+
+.fb-logo img{
+    margin: -28px;
+}
+
+.login-message h2{
+    padding: 0 0 20px 0;
+    margin: 0;
+    font-size: 28px;
+    font-weight: normal;
+}
+
+/* the log-in form sections */
 
 
 
