--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .body-container{
@@ -10,20 +11,20 @@ body{
 
 .main-page{
     background-color: whitesmoke;
-    padding: 112px 0 72px 0;
+    padding: 72px 0 112px 0;
 }
 
 .main-page-container{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    justify-content: space-between;
     max-width: 980px;
     padding: 20px 0;
     margin: 0 auto;
 }
 
 .login-message{
-    flex-basis: 580px;
+    max-width: 548px;
     margin: 0;
     padding-right: 32px;
     text-align: left;
@@ -32,9 +33,9 @@ body{
 .login-form-section{
     display: flex;
     flex-direction: column;
-    height: 496px;
     width: 396px;
-    justify-content: center;
+    padding: 0;
+    justify-content: flex-start;
     text-align: center;
 
 }
@@ -42,6 +43,7 @@ body{
 /* the log-in message sections */
 .fb-logo{
     padding: 112px 0 16px 0;
+    vertical-align: text-top;
 }
 
 .fb-logo img{
@@ -49,6 +51,7 @@ body{
 }
 
 .login-message h2{
+    max-width: 500px;
     padding: 0 0 20px 0;
     margin: 0;
     font-size: 28px;
@@ -57,12 +60,21 @@ body{
 
 /* the log-in form sections */
 .login-form{
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     margin: 40px 0 0 0;
-    padding: 20px 0 28px 0;
+    padding: 10px 0 24px 0;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+    box-sizing: border-box;
+}
+
+.brand-message{
+    margin-top: 28px;
+    font-size: 14px;
 }
 
 .cridentials-box{
@@ -81,8 +93,9 @@ body{
 
 }
 
-.horizontal-line{
-    color: whitesmoke;
+.horizontal-line {
+    color: rgb(221, 223, 226);
+    width: 364px;
     margin: 20px 16px;
 
 }
@@ -97,7 +110,7 @@ body{
 input[type=text], input[type=password]{
     width: 330px;
     padding: 14px 16px;
-    border: 6px none;
+    border: 1px solid rgb(221, 223, 226);
     border-radius: 6px;
     font-size: 17px;
     
@@ -107,7 +120,7 @@ input[type=text], input[type=password]{
 .login-button{
     color: white;
     background-color: dodgerblue;
-    width: 330px;
+    width: 364px;
     padding: 0 16px;
     border: none;
     border-radius: 6px;
@@ -120,14 +133,15 @@ input[type=text], input[type=password]{
 .signup-button{
     color: white;
     background-color: limegreen;
-    width: 55%;
     padding: 0 16px;
-    border: 1px none;
+    border: none;
     border-radius: 6px;
     font-size: 17px;
     font-weight: bold;
     line-height: 48px;
 }
+
+
 
 
 
