--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,10 +72,6 @@ body{
     box-sizing: border-box;
 }
 
-.brand-message{
-    margin-top: 28px;
-    font-size: 14px;
-}
 
 .cridentials-box{
     padding: 6px;
@@ -142,9 +138,110 @@ input[type=text], input[type=password]{
 }
 
 
+.brand-message{
+    margin-top: 28px;
+    font-size: 14px;
+}
+
+.brand-message a:link{
+    color: black;
+    text-decoration: none;
+}
+
+.brand-message a:hover{
+    color: black;
+    text-decoration: underline;
+}
 
 
+.footer{
+    display: flex;
+    flex-direction: column;
+    max-width: 980px;
+    padding-top: 20px;
+    margin: 0 auto;
+    font-size: 12px;
+}
 
 
+.languages {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: left;
+    padding: 0;
+    padding-top: 8px;
+    list-style-type: none;
+
+}
+
+.languages li{
+    color: rgb(115, 115, 115);
+    display: inline-block;
+    padding-left: 10px;
+
+}
+
+.languages li:first-child{
+    padding: 0;
+}
+
+li a:link{
+    color: rgb(115, 115, 115);
+    display: inline-block;
+    text-decoration: none;
+    
+}
+
+li a:hover{
+    color: rgb(115, 115, 115);
+    display: inline-block;
+    text-decoration: underline;
+    
+}
+
+button{
+    border: 1px solid;
+    border-radius: 2px;
+}
+
+.external-links{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: left;
+    padding: 0;
+    padding-top: 8px;
+    list-style-type: none;
+}
+
+li{
+    color: rgb(115, 115, 115);
+    display: inline-block;
+    padding-left: 10px;
+
+}
+
+li:first-child{
+    padding: 0;
+}
+
+li a:link{
+    color: rgb(115, 115, 115);
+    display: inline-block;
+    text-decoration: none;
+    
+}
+
+li a:hover{
+    color: rgb(115, 115, 115);
+    display: inline-block;
+    text-decoration: underline;
+    
+}
 
 
