--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,10 +89,11 @@ body{
 
 }
 
-.horizontal-line {
+.login-form .horizontal-line {
     color: rgb(221, 223, 226);
     width: 364px;
     margin: 20px 16px;
+    font-size: 1px;
 
 }
 
@@ -157,12 +158,15 @@ input[type=text], input[type=password]{
 .footer{
     display: flex;
     flex-direction: column;
-    max-width: 980px;
+    max-width: 1090px;
     padding-top: 20px;
     margin: 0 auto;
     font-size: 12px;
 }
 
+.footer-container{
+    margin: 0 5%;
+}
 
 .languages {
     display: flex;
@@ -171,35 +175,19 @@ input[type=text], input[type=password]{
     justify-content: flex-start;
     align-items: center;
     text-align: left;
-    padding: 0;
-    padding-top: 8px;
+    padding: 8px 0;
+    margin: 0;
+    margin-left: -10px;
+    line-height: 16px;
     list-style-type: none;
 
 }
 
 .languages li{
-    color: rgb(115, 115, 115);
+    color: rgb(138, 141, 145);
     display: inline-block;
     padding-left: 10px;
 
-}
-
-.languages li:first-child{
-    padding: 0;
-}
-
-li a:link{
-    color: rgb(115, 115, 115);
-    display: inline-block;
-    text-decoration: none;
-    
-}
-
-li a:hover{
-    color: rgb(115, 115, 115);
-    display: inline-block;
-    text-decoration: underline;
-    
 }
 
 button{
@@ -216,32 +204,47 @@ button{
     text-align: left;
     padding: 0;
     padding-top: 8px;
+    margin: 0;
+    margin-left: -20px;
+    line-height: 19px;
     list-style-type: none;
 }
 
-li{
-    color: rgb(115, 115, 115);
+.external-links li{ 
+    color: rgb(138, 141, 145);
     display: inline-block;
-    padding-left: 10px;
+    padding-left: 20px;
 
-}
-
-li:first-child{
-    padding: 0;
 }
 
 li a:link{
-    color: rgb(115, 115, 115);
+    color: rgb(138, 141, 145);
     display: inline-block;
     text-decoration: none;
     
 }
 
 li a:hover{
-    color: rgb(115, 115, 115);
+    color: rgb(138, 141, 145);
     display: inline-block;
     text-decoration: underline;
     
 }
 
+.footer .horizontal-line{
+    width: 100%;
+    color:rgb(138, 141, 145);
+    margin: 0;
+    margin-right: 5%;
+    padding: 0;
+    font-size: 0.5px;
+    
+}
+
+.meta-copyright{
+    color: rgb(138, 141, 145);
+    margin: 20px 0px;
+    font-size: 11px;
+
+}
 
