--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,7 @@ body{
 
 .main-page{
     background-color: whitesmoke;
+    height: 536px;
     padding: 72px 0 112px 0;
 }
 
@@ -30,15 +31,6 @@ body{
     text-align: left;
 }
 
-.login-form-section{
-    display: flex;
-    flex-direction: column;
-    width: 396px;
-    padding: 0;
-    justify-content: flex-start;
-    text-align: center;
-
-}
 
 /* the log-in message sections */
 .fb-logo{
@@ -57,6 +49,17 @@ body{
     font-size: 28px;
     font-weight: normal;
 }
+
+.login-form-section{
+    display: flex;
+    flex-direction: column;
+    width: 396px;
+    padding: 0;
+    justify-content: flex-start;
+    text-align: center;
+
+}
+
 
 /* the log-in form sections */
 .login-form{
@@ -86,6 +89,7 @@ body{
     color: dodgerblue;
     margin-top: 16px;
     text-align: center;
+    font-size: 14px;
 
 }
 
@@ -136,6 +140,7 @@ input[type=text], input[type=password]{
     font-size: 17px;
     font-weight: bold;
     line-height: 48px;
+    cursor: pointer;
 }
 
 
@@ -154,7 +159,7 @@ input[type=text], input[type=password]{
     text-decoration: underline;
 }
 
-
+/* the footer sections*/
 .footer{
     display: flex;
     flex-direction: column;
@@ -183,6 +188,7 @@ input[type=text], input[type=password]{
 
 }
 
+/*languages sections*/
 .languages li{
     color: rgb(138, 141, 145);
     display: inline-block;
@@ -190,7 +196,7 @@ input[type=text], input[type=password]{
 
 }
 
-button{
+.more-language-button{
     border: 1px solid;
     border-radius: 2px;
 }
@@ -210,6 +216,8 @@ button{
     list-style-type: none;
 }
 
+
+/* exteranal link sections*/
 .external-links li{ 
     color: rgb(138, 141, 145);
     display: inline-block;
@@ -217,6 +225,7 @@ button{
 
 }
 
+/* the li > a tags' style is the same for both languages and external-links */
 li a:link{
     color: rgb(138, 141, 145);
     display: inline-block;
@@ -229,6 +238,15 @@ li a:hover{
     display: inline-block;
     text-decoration: underline;
     
+}
+
+li a:visited{
+    color: rgb(138, 141, 145);
+    display: inline-block;
+    text-decoration: none;
+    
+}
+
 }
 
 .footer .horizontal-line{
