--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,12 +16,17 @@ body{
 }
 
 .main-page-container{
+    max-width: 1090px;
+    margin: 0 auto;
+}
+
+.main-page-flex-container{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     max-width: 980px;
     padding: 20px 0;
-    margin: 0 auto;
+    margin: 0 5%;
 }
 
 .login-message{
@@ -161,8 +166,6 @@ input[type=text], input[type=password]{
 
 /* the footer sections*/
 .footer{
-    display: flex;
-    flex-direction: column;
     max-width: 1090px;
     padding-top: 20px;
     margin: 0 auto;
