--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,22 +9,21 @@ body{
     flex-direction: column;
 }
 
-.main-page{
+.main-page-container{
     background-color: whitesmoke;
     height: 536px;
     padding: 72px 0 112px 0;
 }
 
-.main-page-container{
+.main-page{
     max-width: 1090px;
     margin: 0 auto;
 }
 
-.main-page-flex-container{
+.main-page-content-container{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    max-width: 980px;
     padding: 20px 0;
     margin: 0 5%;
 }
@@ -40,16 +39,16 @@ body{
 /* the log-in message sections */
 .fb-logo{
     padding: 112px 0 16px 0;
-    vertical-align: text-top;
 }
 
 .fb-logo img{
-    margin: -28px;
+    max-height: 46px;
 }
 
 .login-message h2{
     max-width: 500px;
-    padding: 0 0 20px 0;
+    padding: 0;
+    padding-right: 20px;
     margin: 0;
     font-size: 28px;
     font-weight: normal;
@@ -72,7 +71,8 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 40px 0 0 0;
+    margin: 0;
+    margin-top: 40px;
     padding: 10px 0 24px 0;
     border: none;
     border-radius: 8px;
@@ -102,7 +102,7 @@ body{
     color: rgb(221, 223, 226);
     width: 364px;
     margin: 20px 16px;
-    font-size: 1px;
+    font-size: 0.5px;
 
 }
 
@@ -133,6 +133,7 @@ input[type=text], input[type=password]{
     font-size: 20px;
     font-weight: bold;
     line-height: 48px;
+    cursor: pointer;
 
 }
 
@@ -228,7 +229,7 @@ input[type=text], input[type=password]{
 
 }
 
-/* the li > a tags' style is the same for both languages and external-links */
+/* the a tags inside the li style is the same for both the lists of languages and external-links */
 li a:link{
     color: rgb(138, 141, 145);
     display: inline-block;
@@ -250,7 +251,6 @@ li a:visited{
     
 }
 
-}
 
 .footer .horizontal-line{
     width: 100%;
@@ -268,4 +268,5 @@ li a:visited{
     font-size: 11px;
 
 }
+
 
