--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ body{
 }
 
 .main-page-container{
-    background-color: whitesmoke;
+    background-color: rgb(240, 242, 245);
     height: 536px;
     padding: 72px 0 112px 0;
 }
@@ -134,6 +134,30 @@ input:focus{
     font-size: 14px;
 
 }
+
+.forgot-password-box a:link{
+    color: dodgerblue;
+    display: inline-block;
+    text-decoration: none;
+    
+}
+
+
+.forgot-password-box a:hover{
+    color: dodgerblue;
+    display: inline-block;
+    text-decoration: underline;
+    
+}
+
+
+.forgot-password-box a:visited{
+    color: dodgerblue;
+    display: inline-block;
+    text-decoration: none;
+    
+}
+
 
 .login-form .horizontal-line {
     color: rgb(221, 223, 226);
